kubernetes/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-depl
  labels:
    app: webapp-pod
  namespace: default
spec:
  replicas: 8
  selector:
    matchLabels:
      app: webapp-pod
  template:
    metadata:
      labels:
        app: webapp-pod
    spec:
      containers:
        - name: webapp-container
          imagePullPolicy: IfNotPresent # dont forget to change later
          image: wildsonbbl/gnnepcsaft:v2
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "0.50"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: default
spec:
  selector:
    app: webapp-pod
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  labels:
    name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gnnepcsaft.online
      secretName: webapp-secret-tls
  rules:
    - host: gnnepcsaft.online
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: webapp-svc
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx-ingress
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
